# base_django

./: db.sqlite3  pyproject.toml
core/: celery.py  settings.py  urls.py
home/: urls.py  views.py
