[tool.poetry]
name = "test-django"
version = "0.1.0"
description = ""
authors = ["ngoclinh8123 <ngoclinh8123@gmail.com>"]
readme = "README.md"
packages = [{include = "test_django"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.3"
djangorestframework = "^3.14.0"
celery = "^5.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
